Fix action button contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,6 @@ a {
   border: none;
   outline: none;
   border-radius: 20px;
-  font-size: 0.8rem;
   font-weight: bold;
   cursor: pointer;
 }
